# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
    "drake_cc_googletest",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

#drake_cc_library(
#  name = "pbr_material",
#  hdrs = ["pbr_material.h"],
#  srcs = ["pbr_material.cc"],
#)

drake_cc_library(
    name = "godot_renderer",
    srcs = [
        "godot_renderer.cc",
        "godot_scene.cc",
        "os_dummy.cc",
    ],
    hdrs = [
        "godot_renderer.h",
        "godot_scene.h",
        "os_dummy.h",
    ],
    #linkopts = ["-lglfw", "-ldl", "-lpng", "-lz"],
    linkopts = ["-lglfw"],
    visibility = ["//visibility:public"],
    deps = select({
        "//conditions:default": [
            "@godotengine",
            "@eigen",
        ],
        "//tools/cc_toolchain:apple": [],
    }),
)

drake_cc_googletest(
    name = "godot_renderer_test",
    local = 1,
    deps = [
        ":godot_renderer",
    ],
)

add_lint_tests()
